examples/example_026/example_26/example_026.v
Require Import qux.A.

Fail Definition b := a.
